Fix jumpiness for right diagram

--- a/app/_scss/pages/beercamp/_beercamp-dev.scss
+++ b/app/_scss/pages/beercamp/_beercamp-dev.scss
@@ -46,7 +46,6 @@
 		position: fixed;
 		z-index: 50;
 		top: 0;
-		padding-bottom: 0;
 	}
 	&.skrollable-after {
 		position: absolute;
